商品追加機能の完成。商品表示機能、カートに入れる機能の実装中

--- a/include/view/ec_head_index.html
+++ b/include/view/ec_head_index.html
@@ -1,6 +1,6 @@
 	<style>
 		.item {display:inline-block; border: 1px solid #ccc;}	
 	</style>
-	<title>商品管理</title>
+	<title>商品一覧</title>
 </head>
 <body>
