購入完了後、商品を表示する機能を実装

--- a/include/view/ec_head.html
+++ b/include/view/ec_head.html
@@ -2,4 +2,4 @@
 <html lang="ja">
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="../../0006/include/css/style.css">
+		<link rel="stylesheet" href="../../0006/css/style.css">
