--- a/include/view/ec_head_index.html
+++ b/include/view/ec_head_index.html
@@ -1,6 +1,3 @@
-	<style>
-		.item {display:inline-block; border: 1px solid #ccc;}	
-	</style>
-	<title>商品一覧</title>
+	<title>ログイン</title>
 </head>
 <body>
