--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
 
-.msg{color: green;}
-.error{color: red;}
+.msg, .displayed{color: green;}
+.error, .non-displayed{color: red;}
 img {width: 150px; height: 100px;}
+.item {display:inline-block; border: 1px solid #ccc;}	
