検索結果の表示を修正ほか

--- a/include/view/ec_footer.html
+++ b/include/view/ec_footer.html
@@ -1,5 +1,6 @@
 	<footer class="footer">
 		<p class="copyright">Copyright © 2023 Koruri Araki</p>
 	</footer>
+	<!-- <script src="../../0006/js/main.js"></script> -->
 </body>
 </html>
