--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1,6 +1,27 @@
 @charset "utf-8";
 
-.msg, .displayed{color: green;}
-.error, .non-displayed{color: red;}
-img {width: 150px; height: 100px;}
-.item {display:inline-block; border: 1px solid #ccc;}	
+p {
+	margin-block-start: 0;
+	margin-block-end: 0;
+}
+
+.msg, .displayed {
+	color: green;
+}
+
+.error, .non-displayed {
+	color: red;
+}
+
+img {
+	width: 150px; height: 100px;
+}
+
+.item {
+	display:inline-block;
+	border: 1px solid #ccc;
+}
+
+.browse-item {
+	width: 200px;
+}
